# oak-experiment

codelab_1/: Cargo.toml
codelab_1/enclave_app/: Cargo.toml  build.rs
codelab_1/enclave_app/src/: main.rs
codelab_1/service/: Cargo.toml  build.rs
codelab_1/service/proto/: service.proto
codelab_1/service/proto/rust_proto_stubs/: evidence.proto
codelab_1/service/src/: lib.rs
